# ChangeLog for media-libs/libexif
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libexif/ChangeLog,v 1.74 2007/05/30 20:24:27 welp Exp $

  30 May 2007; Peter Weller <welp@gentoo.org> libexif-0.6.15.ebuild:
  Stable on amd64 wrt bug 178081

  29 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> libexif-0.6.15.ebuild:
  Stable on sparc wrt security #178081

  29 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  libexif-0.6.15.ebuild:
  ppc stable, bug #178081

  28 May 2007; Raúl Porcel <armin76@gentoo.org> libexif-0.6.15.ebuild:
  alpha/ia64/x86 stable wrt security #178081

  28 May 2007; Jeroen Roovers <jer@gentoo.org> libexif-0.6.15.ebuild:
  Stable for HPPA (bug #178081).

  27 May 2007; Brent Baude <ranger@gentoo.org> libexif-0.6.15.ebuild:
  Marking libexif-0.6.15 ppc64 stable for bug 178081

*libexif-0.6.15 (27 May 2007)

  27 May 2007; Jeremy Huddleston <eradicator@gentoo.org>
  +libexif-0.6.15.ebuild:
  Version bump to address security issue.  See bug #178081.

  30 Apr 2007; Marius Mauch <genone@gentoo.org> libexif-0.5.12-r3.ebuild:
  Replacing einfo with elog

  19 Feb 2007; Marien Zwart <marienz@gentoo.org> libexif-0.6.13-r1.ebuild:
  Move preserve_old_lib call from src_install to pkg_postinst because
  preserve_old_lib now calls die if called from src_install. Changes a stable
  ebuild because libexif-0.6.13-r2 probably has too many changes to go stable
  everywhere right now. Thanks to Logix101 for reporting the problem on irc.

  08 Feb 2007; Fabian Groffen <grobian@gentoo.org> libexif-0.5.12-r3.ebuild,
  libexif-0.6.12-r4.ebuild, libexif-0.6.13-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  08 Feb 2007; Steve Arnold <nerdboy@gentoo.org> libexif-0.6.13-r1.ebuild,
  libexif-0.6.13-r2.ebuild:
  corrected erroneous use of static use flag (bug 165358)

*libexif-0.6.13-r2 (04 Feb 2007)

  04 Feb 2007; Maurice van der Pot <griffon26@gentoo.org>