@@ -66,14 +66,18 @@ EBUILD libexif-0.6.13-r2.ebuild 1866 RMD160 4efb08e1bc8fee5bf082df3c45094c58811d
 MD5 38028593fdb8b4caeb20e84f75fbe7d2 libexif-0.6.13-r2.ebuild 1866
 RMD160 4efb08e1bc8fee5bf082df3c45094c58811dd920 libexif-0.6.13-r2.ebuild 1866
 SHA256 33a359cd20521613772ad3b68d485e4ebb88a5ac026ddd70ad427bb72582e6fb libexif-0.6.13-r2.ebuild 1866
+EBUILD libexif-0.6.15-r1.ebuild 1418 RMD160 7e926d115bdc53685638e51d900b35022ceced0a SHA1 849758ee2ccd8467f68853648b06f23ef578d1b9 SHA256 c077be86c618154c2d114474eeb7318156fe1c8c25757c7b0df59a3629b3c108
+MD5 83841788bb8218e8dfb3acebb337a1a3 libexif-0.6.15-r1.ebuild 1418
+RMD160 7e926d115bdc53685638e51d900b35022ceced0a libexif-0.6.15-r1.ebuild 1418
+SHA256 c077be86c618154c2d114474eeb7318156fe1c8c25757c7b0df59a3629b3c108 libexif-0.6.15-r1.ebuild 1418
 EBUILD libexif-0.6.15.ebuild 1332 RMD160 31e125b0da6c18f36f434b2b58299cc033d11968 SHA1 3d5937ef404443fc97fa2036399a29779581a413 SHA256 b3d2ba59ef6a4236b088dc3ab062e708b042b9632d8659b806278005f70dac15
 MD5 bb2c127692b02a57691bccdc512c3bae libexif-0.6.15.ebuild 1332
 RMD160 31e125b0da6c18f36f434b2b58299cc033d11968 libexif-0.6.15.ebuild 1332
 SHA256 b3d2ba59ef6a4236b088dc3ab062e708b042b9632d8659b806278005f70dac15 libexif-0.6.15.ebuild 1332
-MISC ChangeLog 11079 RMD160 bb3039ceb001cf36b8a37a7b8a29cbe5b243cd64 SHA1 278c6788351f2defe8c5ce476c8a73125bb9db12 SHA256 ee3048e700465d37dc7aa82f0906b38c4a084ca4f7ad9cd8e787b5353cbb2b89
-MD5 08df1edf84c35e1b450e488dc1281f35 ChangeLog 11079
-RMD160 bb3039ceb001cf36b8a37a7b8a29cbe5b243cd64 ChangeLog 11079
-SHA256 ee3048e700465d37dc7aa82f0906b38c4a084ca4f7ad9cd8e787b5353cbb2b89 ChangeLog 11079
+MISC ChangeLog 11242 RMD160 c859d9cacc4709a521604317b77d90527c019290 SHA1 f4c46ec423b4b8e028ed9a6d30a70c4f94334ded SHA256 16c953177ef666bc24c31d4527b84cc903ff4c9ddeebeba2892c19c93f6c3378
+MD5 a32049e5162c1cc69b75b4d4266d8a0b ChangeLog 11242
+RMD160 c859d9cacc4709a521604317b77d90527c019290 ChangeLog 11242
+SHA256 16c953177ef666bc24c31d4527b84cc903ff4c9ddeebeba2892c19c93f6c3378 ChangeLog 11242
 MISC metadata.xml 259 RMD160 d1f5ea37202987c54db9697175a55e5609386654 SHA1 d7234631415b27fa166f13d440f0ea6e4d3f1044 SHA256 14f1bab6a31d434eda6319b2783239e50179d75501edb6e255bb6c3e665418cf
 MD5 c1e212329f9083e2405b16dd382d6632 metadata.xml 259
 RMD160 d1f5ea37202987c54db9697175a55e5609386654 metadata.xml 259
@@ -93,3 +97,6 @@ SHA256 cc40bb596055061fa461e6808cbc5166d426cfc0b8e8533a7c3d05262fbd4e35 files/di
 MD5 9d17b9b061a2f15ca466977b996e3f45 files/digest-libexif-0.6.15 247
 RMD160 8047e36e05085eca9807403a3e85030fa7efb816 files/digest-libexif-0.6.15 247
 SHA256 6d243c81c582e4fcf3b86f046f23029745fdfe450c7267ff4967b7af019036c4 files/digest-libexif-0.6.15 247
+MD5 9d17b9b061a2f15ca466977b996e3f45 files/digest-libexif-0.6.15-r1 247
+RMD160 8047e36e05085eca9807403a3e85030fa7efb816 files/digest-libexif-0.6.15-r1 247
+SHA256 6d243c81c582e4fcf3b86f046f23029745fdfe450c7267ff4967b7af019036c4 files/digest-libexif-0.6.15-r1 247
