@@ -1,0 +1,3 @@
+MD5 58871e364c454d107eee001456cc8f24 libexif-0.6.15.tar.bz2 677568
+RMD160 620e36aa418a38de299720d044706b8051a50581 libexif-0.6.15.tar.bz2 677568
+SHA256 2dba37302c34175025515a4caa182bd40c289af83cc067e525ac3de162ac8811 libexif-0.6.15.tar.bz2 677568
